# SDL_image_cmake

./: CMakeLists.txt  Config.cmake.in
